--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
   "dependencies": {
     "bfv-api": "^1.3.3",
     "exceljs": "^4.4.0",
-    "json2csv": "6.0.0-alpha.2",
-    "xlsx": "^0.18.5"
+    "json2csv": "6.0.0-alpha.2"
   },
   "devDependencies": {
     "@types/node": "^24.1.0",
