--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bfv-api": "^1.3.3",
     "exceljs": "^4.4.0",
+    "ics": "^3.8.1",
     "json2csv": "6.0.0-alpha.2"
   },
   "devDependencies": {
