--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.14.0",
   "dependencies": {
+    "axios": "^1.12.0",
     "bfv-api": "^1.3.3",
     "exceljs": "^4.4.0",
     "ics": "^3.8.1",
